%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Pistol
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: Idle
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 1
    m_Controller: {fileID: 9100000}
  - m_Name: Fire
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Run
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Jump
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Pickup
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Give
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Take
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110276767}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .0170293171
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Fire
    m_EventTreshold: 0
    m_ExitTime: .892857134
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110101897
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110276767}
  m_DstState: {fileID: 110264384}
  m_TransitionDuration: .107142858
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Run
    m_EventTreshold: 0
    m_ExitTime: .892857134
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110105822
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110264384}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .0191141684
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Fire
    m_EventTreshold: 0
    m_ExitTime: .727272749
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110109230
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 0}
  m_TransitionDuration: .176470593
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .823529422
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110127918
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110228536}
  m_DstState: {fileID: 110268602}
  m_TransitionDuration: .0172081981
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Give
    m_EventTreshold: 0
    m_ExitTime: .25
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110130974
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110264384}
  m_DstState: {fileID: 110228536}
  m_TransitionDuration: .0609209985
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Take
    m_EventTreshold: 0
    m_ExitTime: .727272749
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110135469
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110276767}
  m_TransitionDuration: .0229027849
  m_TransitionOffset: .090302825
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Idle
    m_EventTreshold: 0
    m_ExitTime: .375
  - m_ConditionMode: 5
    m_ConditionEvent: Idle
    m_EventTreshold: 0
    m_ExitTime: .906765699
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110157167
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110264384}
  m_TransitionDuration: .157763436
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Run
    m_EventTreshold: 0
    m_ExitTime: .375
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110162015
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110276767}
  m_DstState: {fileID: 110228536}
  m_TransitionDuration: .0119666336
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Take
    m_EventTreshold: 0
    m_ExitTime: .892857134
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110175490
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110228536}
  m_DstState: {fileID: 110276767}
  m_TransitionDuration: .75
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .25
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110177901
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110268602}
  m_DstState: {fileID: 110276767}
  m_TransitionDuration: .250324875
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Idle
    m_EventTreshold: 0
    m_ExitTime: .25
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110178702
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110276767}
  m_DstState: {fileID: 110268602}
  m_TransitionDuration: .0244897772
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Give
    m_EventTreshold: 0
    m_ExitTime: .892857134
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110183406
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110228536}
  m_TransitionDuration: .0795455202
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Take
    m_EventTreshold: 0
    m_ExitTime: .375
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110189368
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110264384}
  m_DstState: {fileID: 110276767}
  m_TransitionDuration: .272727281
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Idle
    m_EventTreshold: 0
    m_ExitTime: .727272749
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: "\u0421\u0442\u0440\u0435\u043B\u044C\u0431\u0430"
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: c47c1b52fdf778845abfcfaf2d6e82a6, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 312, y: -252, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110228536
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: "\u0423\u0431\u0438\u0440\u0430\u043D\u0438\u0435 \u043E\u0440\u0443\u0436\u0438\u044F"
  m_Speed: .200000003
  m_CycleOffset: .5
  m_Motions:
  - {fileID: 7400000, guid: bb79fc6139bb8d448b480cb212073b64, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -108, y: -60, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 1
  m_Tag: 
--- !u!1102 &110264384
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: "\u0411\u0435\u0433"
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: f0eae53623442d84eb7f60d94fc1319d, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 384, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110268602
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: "\u0412\u0437\u044F\u0442\u0438\u0435 \u043E\u0440\u0443\u0436\u0438\u044F"
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: bb79fc6139bb8d448b480cb212073b64, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -108, y: -216, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110276767
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: "\u0421\u043E\u0441\u0442\u043E\u044F\u043D\u0438\u0435 \u043F\u043E\u043A\u043E\u044F"
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 41794a0a821223049a77a39d163d954f, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 180, y: -84, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110276767}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110276767}
  - {fileID: 110264384}
  - {fileID: 110228536}
  - {fileID: 110268602}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 110276767}
      second:
      - {fileID: 110100000}
      - {fileID: 110101897}
      - {fileID: 110162015}
      - {fileID: 110178702}
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110135469}
      - {fileID: 110157167}
      - {fileID: 110183406}
    data:
      first: {fileID: 110264384}
      second:
      - {fileID: 110189368}
      - {fileID: 110105822}
      - {fileID: 110130974}
    data:
      first: {fileID: 110228536}
      second:
      - {fileID: 110175490}
      - {fileID: 110127918}
    data:
      first: {fileID: 110268602}
      second:
      - {fileID: 110177901}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 120, y: 72, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
